crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_not_found_ctor.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (..)\nvalue = Name\n"
---
nash::names::not_found_ctor

  × Unknown variant `Name`.
   ╭─[Main.nash:2:9]
 1 │ module Main exposing (..)
 2 │ value = Name
   ·         ────
   ╰────
  help: Similar names:

            Primitive.B
            Primitive.I
            Primitive.Map
            Primitive.List
