crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_not_found_type.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::not_found_type

  × Unknown type `name`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Try name instead.
