crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_not_found_var.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
NAMING ERROR

  × I cannot find a `name` variable:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: These names seem close though:

            name

        Hint: Read <https://nash-script.dev/hints/imports> to see how `import`
        declarations work in Nash.
