crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_orphan_impl.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "import First exposing (Equal)\nimpl First.Equal First.Equal where\n    equal x y = True"
---
nash::names::orphan_impl

  × This module cannot define an impl of `First.Equal` for First.Equal:
   ╭─[Main.nash:2:1]
 1 │ import First exposing (Equal)
 2 │ impl First.Equal First.Equal where
   · ──────────────────────────────────
 3 │     equal x y = True
   ╰────
  help: An impl must be defined in the module that defines its trait or one of its head
        types. Move this impl to one of those modules.
