crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_overlapping_impls.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "impl First.Equal 'a where\n    equal x y = True\nimpl First.Equal 'a where\n    equal x y = False"
---
nash::names::overlapping_impls

  × These `First.Equal` impls can both match the same trait arguments. The
  │ overlapping head is 'a0:
   ╭─[Main.nash:3:1]
 1 │ impl First.Equal 'a where
   · ────────────┬────────────
   ·             ╰── first impl in `First`
 2 │     equal x y = True
 3 │ impl First.Equal 'a where
   · ────────────┬────────────
   ·             ╰── overlapping impl in `Second`
 4 │     equal x y = False
   ╰────
  help: Remove one impl or make their heads disjoint; ordinary trait constraints do not
        disambiguate heads.
