crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_pattern_has_record_ctor.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × Record constructor `name` cannot be used in a pattern.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Bind the record to a variable and access its fields.
