crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_record_type_outside_alias.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × This record type needs a name:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: A record type is only allowed as the direct body of a type alias. Give this
        record a named alias.
