crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_recursive_alias.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
ALIAS PROBLEM

  × This type alias is recursive, forming an infinite type!
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: When I expand a recursive type alias, it just keeps getting bigger and bigger.
        So dealiasing results in an infinitely large type! Try this instead:

            type Loop 'a =
                Loop
                    'a

        Hint: This is kind of a subtle distinction. I suggested the naive fix, but I
        recommend reading <https://nash-script.dev/hints/recursive-alias> for ideas on
        how to do better.
